--- a/index.ipynb
+++ b/index.ipynb
@@ -106,12 +106,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "unexpected indent (<ipython-input-2-b955f8140f52>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-2-b955f8140f52>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    return four_x_cubed_plus_eleven_x_squared [0] + four_x_cubed_plus_eleven_x_squared[1]\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
+     ]
+    }
+   ],
    "source": [
     "four_x_cubed_plus_eleven_x_squared = [(4, 3), (11, 2)]\n",
-    "    return "
+    "    return four_x_cubed_plus_eleven_x_squared [0] + four_x_cubed_plus_eleven_x_squared[1]"
    ]
   },
   {
