--- a/index.ipynb
+++ b/index.ipynb
@@ -119,8 +119,7 @@
     }
    ],
    "source": [
-    "four_x_cubed_plus_eleven_x_squared = [(4, 3), (11, 2)]\n",
-    "return four_x_cubed_plus_eleven_x_squared [0] + four_x_cubed_plus_eleven_x_squared[1]"
+    "four_x_cubed_plus_eleven_x_squared = [(4, 3), (11, 2)]"
    ]
   },
   {
