--- a/index.ipynb
+++ b/index.ipynb
@@ -182,18 +182,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "def output_at(list_of_terms, x_value):\n",
-    "    outputs = list(map(lambda term: term_output[term, x_value], list_of_terms))\n",
+    "    outputs = list(map(lambda term: term_output(term, x_value), list_of_terms))\n",
     "    return sum(outputs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +202,7 @@
        "16"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
