--- a/index.ipynb
+++ b/index.ipynb
@@ -750,7 +750,8 @@
    "outputs": [],
    "source": [
     "def derivative_of(list_of_terms, x_value, delta_x):\n",
-    "    derivative = list9map(lambda )"
+    "    delta = delta_f(list_of_terms,x_value,delta_x)\n",
+    "    return round(delt)"
    ]
   },
   {
