Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -816,9 +816,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'x': [0.0, 2, 4.0],\n",
+       " 'y': [15.0, 23, 31.0],\n",
+       " 'mode': 'lines',\n",
+       " 'name': \"f' (x) = 4.0\",\n",
+       " 'text': []}"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "tangent_line_four_x_plus_fifteen = derivative_trace(four_x_plus_fifteen, 2, line_length = 4, delta_x = .01)\n",
     "tangent_line_four_x_plus_fifteen"
@@ -833,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -853,9 +868,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "mode": "lines",
+         "name": "data",
+         "text": [],
+         "type": "scatter",
+         "uid": "899a21e6-8752-11e9-ad69-872114e5433b",
+         "x": [
+          0,
+          1,
+          2,
+          3,
+          4,
+          5
+         ],
+         "y": [
+          15,
+          19,
+          23,
+          27,
+          31,
+          35
+         ]
+        },
+        {
+         "mode": "lines",
+         "name": "f' (x) = 4.0",
+         "text": [],
+         "type": "scatter",
+         "uid": "899a2358-8752-11e9-ad69-872114e5433b",
+         "x": [
+          1,
+          2,
+          3
+         ],
+         "y": [
+          19,
+          23,
+          27
+         ]
+        },
+        {
+         "mode": "lines",
+         "name": "delta f = 1",
+         "text": [],
+         "type": "scatter",
+         "uid": "899a2448-8752-11e9-ad69-872114e5433b",
+         "x": [
+          3,
+          3
+         ],
+         "y": [
+          23,
+          27
+         ]
+        },
+        {
+         "mode": "lines",
+         "name": "delta x = 1",
+         "text": [],
+         "type": "scatter",
+         "uid": "899a24f2-8752-11e9-ad69-872114e5433b",
+         "x": [
+          2,
+          3
+         ],
+         "y": [
+          23,
+          23
+         ]
+        }
+       ],
+       "layout": {}
+      },
+      "text/html": [
+       "<div id=\"c77ebb12-0701-4e1c-879b-1c25bac46e58\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"c77ebb12-0701-4e1c-879b-1c25bac46e58\", [{\"mode\": \"lines\", \"name\": \"data\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5], \"y\": [15, 19, 23, 27, 31, 35], \"type\": \"scatter\", \"uid\": \"899f49e6-8752-11e9-ad69-872114e5433b\"}, {\"mode\": \"lines\", \"name\": \"f' (x) = 4.0\", \"text\": [], \"x\": [1.0, 2, 3.0], \"y\": [19.0, 23, 27.0], \"type\": \"scatter\", \"uid\": \"899f4b62-8752-11e9-ad69-872114e5433b\"}, {\"mode\": \"lines\", \"name\": \"delta f = 1\", \"text\": [], \"x\": [3, 3], \"y\": [23, 27], \"type\": \"scatter\", \"uid\": \"899f4c20-8752-11e9-ad69-872114e5433b\"}, {\"mode\": \"lines\", \"name\": \"delta x = 1\", \"text\": [], \"x\": [2, 3], \"y\": [23, 23], \"type\": \"scatter\", \"uid\": \"899f4cb6-8752-11e9-ad69-872114e5433b\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"c77ebb12-0701-4e1c-879b-1c25bac46e58\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"c77ebb12-0701-4e1c-879b-1c25bac46e58\", [{\"mode\": \"lines\", \"name\": \"data\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5], \"y\": [15, 19, 23, 27, 31, 35], \"type\": \"scatter\", \"uid\": \"899f49e6-8752-11e9-ad69-872114e5433b\"}, {\"mode\": \"lines\", \"name\": \"f' (x) = 4.0\", \"text\": [], \"x\": [1.0, 2, 3.0], \"y\": [19.0, 23, 27.0], \"type\": \"scatter\", \"uid\": \"899f4b62-8752-11e9-ad69-872114e5433b\"}, {\"mode\": \"lines\", \"name\": \"delta f = 1\", \"text\": [], \"x\": [3, 3], \"y\": [23, 27], \"type\": \"scatter\", \"uid\": \"899f4c20-8752-11e9-ad69-872114e5433b\"}, {\"mode\": \"lines\", \"name\": \"delta x = 1\", \"text\": [], \"x\": [2, 3], \"y\": [23, 23], \"type\": \"scatter\", \"uid\": \"899f4cb6-8752-11e9-ad69-872114e5433b\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "delta_x = 1\n",
     "\n",
@@ -877,9 +980,133 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is the format of your plot grid:\n",
+      "[ (1,1) x1,y1 ]  [ (1,2) x2,y2 ]\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "mode": "lines",
+         "name": "data",
+         "text": [],
+         "type": "scatter",
+         "uid": "9286d83a-8752-11e9-ad69-872114e5433b",
+         "x": [
+          0,
+          1,
+          2,
+          3,
+          4,
+          5,
+          6
+         ],
+         "xaxis": "x",
+         "y": [
+          15,
+          19,
+          23,
+          27,
+          31,
+          35,
+          39
+         ],
+         "yaxis": "y"
+        },
+        {
+         "mode": "lines",
+         "name": "data",
+         "text": [],
+         "type": "scatter",
+         "uid": "92880bce-8752-11e9-ad69-872114e5433b",
+         "x": [
+          0,
+          1,
+          2,
+          3,
+          4,
+          5,
+          6
+         ],
+         "xaxis": "x2",
+         "y": [
+          4,
+          4,
+          4,
+          4,
+          4,
+          4,
+          4
+         ],
+         "yaxis": "y2"
+        }
+       ],
+       "layout": {
+        "xaxis": {
+         "anchor": "y",
+         "domain": [
+          0,
+          0.45
+         ]
+        },
+        "xaxis2": {
+         "anchor": "y2",
+         "domain": [
+          0.55,
+          1
+         ]
+        },
+        "yaxis": {
+         "anchor": "x",
+         "domain": [
+          0,
+          1
+         ]
+        },
+        "yaxis2": {
+         "anchor": "x2",
+         "domain": [
+          0,
+          1
+         ]
+        }
+       }
+      },
+      "text/html": [
+       "<div id=\"a27004b3-1acd-425c-8a3d-be279d2ba9e7\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";\n",
+       "        Plotly.plot(\n",
+       "            'a27004b3-1acd-425c-8a3d-be279d2ba9e7',\n",
+       "            [{\"mode\": \"lines\", \"name\": \"data\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5, 6], \"y\": [15, 19, 23, 27, 31, 35, 39], \"type\": \"scatter\", \"uid\": \"9286d83a-8752-11e9-ad69-872114e5433b\", \"xaxis\": \"x\", \"yaxis\": \"y\"}, {\"mode\": \"lines\", \"name\": \"data\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5, 6], \"y\": [4.0, 4.0, 4.0, 4.0, 4.0, 4.0, 4.0], \"type\": \"scatter\", \"uid\": \"92880bce-8752-11e9-ad69-872114e5433b\", \"xaxis\": \"x2\", \"yaxis\": \"y2\"}],\n",
+       "            {\"xaxis\": {\"anchor\": \"y\", \"domain\": [0.0, 0.45]}, \"yaxis\": {\"anchor\": \"x\", \"domain\": [0.0, 1.0]}, \"xaxis2\": {\"anchor\": \"y2\", \"domain\": [0.55, 1.0]}, \"yaxis2\": {\"anchor\": \"x2\", \"domain\": [0.0, 1.0]}},\n",
+       "            {\"showLink\": true, \"linkText\": \"Export to plot.ly\"}\n",
+       "        ).then(function () {return Plotly.addFrames('a27004b3-1acd-425c-8a3d-be279d2ba9e7',{});}).then(function(){Plotly.animate('a27004b3-1acd-425c-8a3d-be279d2ba9e7');})\n",
+       "        });</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"a27004b3-1acd-425c-8a3d-be279d2ba9e7\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";\n",
+       "        Plotly.plot(\n",
+       "            'a27004b3-1acd-425c-8a3d-be279d2ba9e7',\n",
+       "            [{\"mode\": \"lines\", \"name\": \"data\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5, 6], \"y\": [15, 19, 23, 27, 31, 35, 39], \"type\": \"scatter\", \"uid\": \"9286d83a-8752-11e9-ad69-872114e5433b\", \"xaxis\": \"x\", \"yaxis\": \"y\"}, {\"mode\": \"lines\", \"name\": \"data\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5, 6], \"y\": [4.0, 4.0, 4.0, 4.0, 4.0, 4.0, 4.0], \"type\": \"scatter\", \"uid\": \"92880bce-8752-11e9-ad69-872114e5433b\", \"xaxis\": \"x2\", \"yaxis\": \"y2\"}],\n",
+       "            {\"xaxis\": {\"anchor\": \"y\", \"domain\": [0.0, 0.45]}, \"yaxis\": {\"anchor\": \"x\", \"domain\": [0.0, 1.0]}, \"xaxis2\": {\"anchor\": \"y2\", \"domain\": [0.55, 1.0]}, \"yaxis2\": {\"anchor\": \"x2\", \"domain\": [0.0, 1.0]}},\n",
+       "            {\"showLink\": true, \"linkText\": \"Export to plot.ly\"}\n",
+       "        ).then(function () {return Plotly.addFrames('a27004b3-1acd-425c-8a3d-be279d2ba9e7',{});}).then(function(){Plotly.animate('a27004b3-1acd-425c-8a3d-be279d2ba9e7');})\n",
+       "        });</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from graph import make_subplots, trace_values, plot_figure\n",
     "\n",
